Implemented anti-blob detection.

--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@ version '0.2.0'
 
 buildscript {
     ext {
-        kotlin_version = '1.2.30'
+        kotlin_version = '1.2.31'
         junit_version = '4.12'
         metanalysis_version = '0.2.4'
+        picocli_version = '3.0.0-alpha-1'
     }
 
     repositories {
@@ -39,6 +40,7 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "com.github.andreihh.metanalysis:metanalysis-core:$metanalysis_version"
+    implementation "info.picocli:picocli:$picocli_version"
 
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testImplementation "com.github.andreihh.metanalysis:metanalysis-test:$metanalysis_version"
